# drawing-game

./: .directory  .gitignore  .gitmodules
project/data/: images.xml  levels.json  music.xml  res.xml  res_hd.xml  resolutions.json  settings.json  songs.json
project/data-ram/: settings.json
project/data/translations/: en.json
project/proj.android/: settings.gradle
project/proj.android/jni/: Application.mk
project/proj.android/jni/src/: Android.mk
project/proj.cmake/: CMakeLists.txt  run.sh
project/proj.sfos/: CMakeLists.txt
project/src/: ChapterScreen.cpp  ChapterScreen.h  Configuration.cpp  Game.cpp  Game.h  GameScreen.cpp  GameScreen.h  LevelScreen.cpp  LevelScreen.h  MainMenu.cpp  MainMenu.h  MusicPlayer.cpp  MusicPlayer.h  ScreenSwitcher.cpp  SettingsScreen.cpp  SettingsScreen.h  game.cpp  game.h  main.cpp  mainActor.cpp  mainActor.h
project/src/Entities/: Chapter.h
project/src/Helpers/: Configuration.cpp  Configuration.h  GridView.cpp  GridView.h  ScreenSwitcher.cpp  ScreenSwitcher.h  Theme.cpp  Theme.h
